# computer_vision_opencv

./: .gitignore  01_mat_basic.cpp  02_color_space_reduction.cpp  08_threshold.cpp  09_canny_edge_detector.cpp  0_read_im.cpp  10_contours.cpp  11_convex_hull.cpp  12_affine_transform.cpp  13_feature_detection.cpp  14_feature_description_and_matching.cpp  15_feature_matching_filtered.cpp  16_stereo_vision_SGBM.cpp  2_color_space_reduction.cpp  3_im_contrast_enhancement_with_kernel.cpp  4_ims_linear_blend.cpp  5_modify_im_contrast_brightness.cpp  6_gaussian_blur.cpp  7_erosion_dilation.cpp  8_threshold.cpp  CMakeLists.txt  README.md  read_im.cpp
