cmake_minimum_required(VERSION 3.28)
project(computer_vision)
set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
find_package(Pangolin REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("/usr/include/eigen3")
add_executable(computer_vision
        <FILE_NAME>.cpp)
target_link_libraries(computer_vision ${OpenCV_LIBS}  ${Pangolin_LIBRARIES})
